Fix overflow on article's content

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -582,6 +582,7 @@ $article-action-padding: 0.6em;
     width: 42.8125em; // font: 16px / width: 685px (http://www.pearsonified.com/typography/)
     font-size: 1.6rem;
     line-height: 1.7;
+    overflow: auto;
     overflow-wrap: break-word;
 
     @media($breakpoint-max) {
